--- a/package.json
+++ b/package.json
@@ -1,14 +1,28 @@
 {
   "name": "publicationapi",
   "version": "1.0.0",
-  "description": "",
+  "description": "API of publications from around the world",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "BCButcher",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.17.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BCButcher/productionAPI.git"
+  },
+  "keywords": [
+    "magazines",
+    "papers",
+    "journals"
+  ],
+  "bugs": {
+    "url": "https://github.com/BCButcher/productionAPI/issues"
+  },
+  "homepage": "https://github.com/BCButcher/productionAPI#readme"
 }
